--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,7 +1,7 @@
-baseURL = "/"
+baseURL = "https://www.example.com/"
 languageCode = "en-us"
-title = "Strategis Partners"
-themesDir = "themes"
+title = "Hugo Hero Theme"
+themesDir = "../.."
 theme = "hugo-hero-theme"
 
 [module]
