--- a/exampleSite/data/contact.yaml
+++ b/exampleSite/data/contact.yaml
@@ -1,4 +1,4 @@
-email: 'jay.horton 'at' strategispartners.com.au'
+email: 'jay.horton@strategispartners.com.au'
 phone: '+61(0) 412 051 379'
 businessName: 'Strategis Partners'
 address: |
