--- a/theme.toml
+++ b/theme.toml
@@ -1,4 +1,4 @@
-name = "Hero"
+name = "Strategis"
 license = "MIT"
 licenselink = "https://github.com/zerostaticthemes/hugo-hero-theme/blob/master/LICENSE"
 description = "Hero is a multipurpose theme with fullscreen hero images and fullwidth sections. It contains content types for a business or portfolio site."
