primary to gray

--- a/exampleSite/data/contact.yaml
+++ b/exampleSite/data/contact.yaml
@@ -1,7 +1,7 @@
 email: 'jay.horton@strategispartners.com.au'
 phone: '+61(0) 412 051 379'
 businessName: 'Strategis Partners'
-address: |
+located in : |
   Sydney, Australia.
 hours:
   - day: Monday
